--- a/Lecture 11/Lecture 11.Rmd
+++ b/Lecture 11/Lecture 11.Rmd
@@ -102,6 +102,173 @@ write.pdb(pdb.protein, file="1hsg_protein.pdb")
 ```
 
 
+```{r}
+ids <-c("1TND_B","1AGR_A","1TAG_A","1GG2_A","1KJY_A","4G5Q_A")
+files <-get.pdb(ids, split =TRUE)
+```
+
+
+```{r}
+# Extract and align the chains we are interested in
+pdbs <-pdbaln(files, fit =TRUE)
+
+# Print to screen a summary of the 'pdbs' object
+pdbs
+```
+
+
+
+```{r}
+# Access the first 5 rows, and 8 columns
+pdbs$ali[1:5, 1:8]
+
+# Associated residues numbers
+pdbs$resno[1:5, 1:8]
+
+# Inspect alignment for gaps
+gaps <-gap.inspect(pdbs$ali)
+# Indices of non-gap columns
+head(gaps$f.inds)
+# Access non-gap columns
+pdbs$ali[, gaps$f.inds]
+```
+
+
+```{r}
+# Calculate sequence identity
+seqidentity(pdbs)
+
+# Calculate RMSD
+rmsd(pdbs)
+```
+
+```{r}
+# Calculate RMSD
+rd <-rmsd(pdbs)
+
+# Clustering 
+hc <-hclust(as.dist(rd))
+grps <-cutree(hc, k=3)
+
+# Plot results as dendrogram
+hclustplot(hc, k=3)
+```
+
+
+```{r}
+# Perform PCA
+pc <-pca(pdbs)
+plot(pc, col=grps)
+```
+
+
+
+
+## 5.1 Search and retrieve Adenylate kinase structures
+
+```{r}
+aa <-get.seq("1ake_A")
+aa
+
+```
+
+```{r}
+# Blast or hmmer search 
+b <-blast.pdb(aa)
+b
+```
+
+
+```{r}
+# Plot a summary of search results
+hits <-plot(b)
+
+```
+
+
+
+```{r}
+head(hits$pdb.id)
+```
+
+
+
+
+```{r}
+hits
+```
+
+
+
+```{r}
+# Fetch PDBs
+
+files <-get.pdb(hits$pdb.id, path ="pdbs", split =TRUE, gzip =TRUE)
+
+# Align structures
+pdbs <-pdbaln(files)
+
+# Vector containing PDB codes
+ids <-basename.pdb(pdbs$id)
+
+# Draw schematic alignment 
+plot(pdbs, labels=ids)
+```
+
+
+```{r}
+#5.2  Sequence conservation analysis
+# Calculate sequence conservation
+cons <-conserv(pdbs, method="entropy22")
+
+# SSE annotations
+sse <-pdbs2sse(pdbs, ind=1, rm.gaps=FALSE)
+
+# Plot conservation per residue
+plotb3(cons, sse=sse, ylab="Sequence entropy")
+```
+
+
+
+```{r}
+# find invariant core
+core <-core.find(pdbs)
+
+# superimpose all structures to core
+pdbs$xyz =pdbfit(pdbs, core)
+
+# Perform PCA
+pc.xray <-pca(pdbs)
+
+# Calculate RMSD
+rd <-rmsd(pdbs)
+
+# Structure-based clustering
+hc.rd <-hclust(dist(rd))grps.rd <-cutree(hc.rd, k=3)plot(pc.xray, 1:2, col="grey50", bg=grps.rd, pch=21, cex=1)
+```
+
+
+```{r}
+# Left-click on a point to label and right-click to end
+identify(pc.xray$z[,1:2], labels=basename.pdb(pdbs$id))
+
+# Visualize first principal component
+mktrj(pc.xray, pc=1, file="pc_1.pdb")
+```
+
+
+```{r}
+#5.5  Plotting results with ggplot2
+library(ggplot2)
+library(ggrepel)
+df <-data.frame(x=pc.xray$z[,1], y=pc.xray$z[,2])
+col <-as.factor(grps.rd)
+
+p <-ggplot(df, aes(x, y)) +geom_point(aes(col=col), size=2) +xlab("PC1") +ylab("PC2") +scale_color_discrete(name="Clusters") +geom_text_repel(aes(label=ids))
+```
+
+
+
 
 
 
