--- a/Lecture 12/lec12.Rmd
+++ b/Lecture 12/lec12.Rmd
@@ -75,8 +75,59 @@ rmsd(ori, res)
 
 
 
+```{r}
+aa <-get.seq("P69441")
+```
+
+```{r}
+b <-blast.pdb(aa)
+```
 
 
+```{r}
+hits <-plot(b)
+```
+
+
+```{r}
+head(hits$pdb.id)
+```
+
+
+
+```{r}
+files <-get.pdb(hits$pdb.id, path="pdbs", split=TRUE, gzip=TRUE)
+```
+
+
+```{r}
+pdbs <-pdbaln(files, fit=TRUE)
+```
+
+
+
+```{r}
+# Perform PCA & plot the results
+pc.xray <-pca(pdbs)
+
+plot(pc.xray)
+```
+
+
+
+
+```{r}
+# Calculate RMSD
+rd <-rmsd(pdbs)
+
+# Structure-based clustering
+hc.rd <-hclust(dist(rd))
+grps.rd <-cutree(hc.rd, k=3)
+```
+
+```{r}
+plot(pc.xray, 1:2, col="grey50", bg=grps.rd, pch=21, cex=1)
+```
 
 
 
